--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-@charset "UTF-8";
+/* Config Geral */
 
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Dirt&display=swap');
 
@@ -17,15 +18,37 @@
 }
 
 body {
-   background-color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    max-width: 800px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
+
+/* Títulos e Subtítulos*/
 
 h1, h2 {
     font-family: "Rubik Dirt", sans-serif;
+    color: var(--secondary-color);
+    text-shadow: 1px 1px 2px black;
+}
+
+h1 {
+    font-size: 24pt;
+}
+
+h2 {
+    background-color: var(--tertiary-color);
+    font-size: 18pt;
+    text-indent: 6px;
+    padding: 3px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 2px gray;
 }
 
 p {
-    font-family: "Open Sjans", sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 header {
@@ -36,11 +59,16 @@ header {
     align-items: center;
     width: 100%;
     height: 10vh;
+    max-width: 100%;
 }
 
-.titulo {
-    color: var(--secondary-color);
-    text-shadow: 1px 1px 4px black;
+main {
+    background-color: #fff;
+    width: 100%;
+    max-width: 1000px;
+    min-width: 300px;
+    height: 100vh;
+    padding: 10px;
 }
 
 .apresentacao {
