--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 :root {
     --primary-color: #E9EED9;
-    --secondary-color:#CBD2A4;
+    --secondary-color: #CBD2A4;
     --tertiary-color: #9A7E6F;
     --quaternary-color: #54473F;
 }
@@ -25,30 +25,35 @@ body {
     align-items: center;
 }
 
+p {
+    font-family: "Open Sans", sans-serif;
+    padding: 5px;
+}
+
 /* Títulos e Subtítulos*/
 
-h1, h2 {
+h1,
+h2 {
     font-family: "Rubik Dirt", sans-serif;
-    color: var(--secondary-color);
+    font-weight: lighter;
     text-shadow: 1px 1px 2px black;
 }
 
 h1 {
     font-size: 24pt;
+    color: var(--secondary-color);
 }
 
 h2 {
-    background-color: var(--tertiary-color);
-    font-size: 18pt;
+    background-image: linear-gradient(to right, var(--quaternary-color), var(--tertiary-color));
+    color: lightgray;
     text-indent: 6px;
     padding: 3px;
     border-radius: 4px;
     box-shadow: 1px 1px 2px gray;
 }
 
-p {
-    font-family: "Open Sans", sans-serif;
-}
+/* Cabeçalho */
 
 header {
     background-image: linear-gradient(to bottom, var(--tertiary-color), var(--quaternary-color));
@@ -57,14 +62,52 @@ header {
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 10px;
+}
+
+.titulo {
+    font-family: "Rubik Dirt", sans-serif;
+    font-weight: lighter;
+    font-size: 16pt;
+    color: lightgray;
 }
 
 main {
     background-color: #fff;
+    width: 100%;
+    height: 100vh;
+    max-width: 800px;
+    min-width: 300px;
     padding: 10px;
 }
 
 .apresentacao {
-
+    
 }
 
+/* Rodapé */
+
+.footer-bottom {
+    width: 100vw;
+    background-color: black;
+    padding: 0.4rem;
+    text-align: center;
+}
+
+.footer-bottom p {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-bottom>p>a {
+    color: white;
+    text-decoration: underline;
+    padding-left: 5px;
+}
+
+.footer-bottom a:hover {
+    transform: scale(1.1);
+    display: inline-block;
+    margin-left: 5px;
+    transition: transform 0.2s ease-in-out;
+}
