--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,13 @@
 }
 
 :root {
-    --primary-color: ;
-    --secondary-color: #CBD2A4;
-    --tertiary-color: #9A7E6F;
-    --quaternary-color: #54473F;
+    --primary-color: #CBD2A4;
+    --secondary-color: #9A7E6F;
+    --tertiary-color: #54473F;
 }
 
 body {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -48,11 +47,11 @@ h2 {
 
 h1 {
     font-size: 24pt;
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 h2 {
-    background-image: linear-gradient(to right, var(--quaternary-color), var(--tertiary-color));
+    background-image: linear-gradient(to right, var(--tertiary-color), var(--secondary-color));
     color: lightgray;
     text-indent: 6px;
     padding: 3px;
@@ -70,7 +69,7 @@ h3 {
 /* Cabeçalho */
 
 header {
-    background-image: linear-gradient(to bottom, var(--tertiary-color), var(--quaternary-color));
+    background-image: linear-gradient(to bottom, var(--secondary-color), var(--tertiary-color));
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -110,7 +109,7 @@ main {
 }
 
 .img-container {
-    background-color: var(--tertiary-color);
+    background-color: var(--secondary-color);
     width: 90%;
     margin: auto;
     padding: 1.4vh;
@@ -125,7 +124,7 @@ img {
 /*Links*/
 
 .container-links {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     list-style-position: inside;
     padding: 10px;
 }
